# MyLive

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sinieco/mylive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_sinieco_mylive_pusher_PushNative.h  mylive.c  queue.c  queue.h
app/src/main/java/com/sinieco/mylive/: MainActivity.java  XPermissionUtils.java
app/src/main/java/com/sinieco/mylive/listener/: LiveStateChangeListener.java
app/src/main/java/com/sinieco/mylive/params/: AudioParams.java  VideoParmas.java
app/src/main/java/com/sinieco/mylive/pusher/: AudioPusher.java  LivePusher.java  PushNative.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sinieco/mylive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
